fixed white space issues

--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -55,7 +55,6 @@
   }
 }
 
-
 .menuButton {
   width: 48%;
   background: var(--button-color);
@@ -134,7 +133,6 @@
 
 .footertype {
   background: var(--footer-background);
-  bottom: 0;
   /* padding-top: 1px; */
   /* margin-top: 100px; */
 }
@@ -400,7 +398,7 @@ navmain {
 
 .mainTitleMenu {
   background-color: #5838B4;
-  top: 0;
+  padding: 30px;
 }
 
 .navmenu-icon {
